[package]
name = "vvvvvv-rust"
version = "0.1.0"
authors = ["sypwex <sypwex@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# sdl2 = "0.34.5"
# sdl2-sys = "0.34.5"
sdl2 = { git = "https://github.com/sypwex/rust-sdl2", features = ["mixer"] }
sdl2-sys = { git = "https://github.com/sypwex/rust-sdl2", features = ["mixer"] }
png = "0.16"
libc = "^0.2"
rand = "0.8.3"
physfs = { git = "https://github.com/sypwex/physfs" }
log = "0.4.14"
env_logger = "0.9.0"
quick-xml = "0.22.0"

[profile.release]
debug = true
