[package]
name = "vvvvvv-rust"
version = "0.1.0"
authors = ["sypwex <sypwex@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# sdl2 = "0.34.5"
# sdl2-sys = "0.34.5"
# sdl2 = { git = "https://github.com/sypwex/rust-sdl2", features = ["mixer"] }
# sdl2-sys = { git = "https://github.com/sypwex/rust-sdl2", features = ["mixer"] }
sdl2 = { path = "../sdl2", features = ["mixer"] }
sdl2-sys = { path = "../sdl2/sdl2-sys", features = ["mixer"] }
png = "0.16"
libc = "^0.2"
rand = "0.8.3"
# physfs = { git = "https://github.com/sypwex/physfs" }
physfs = { path = "../physfs" }
log = "0.4.14"
env_logger = "0.9.0"
quick-xml = "0.22.0"

getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.84"
console_error_panic_hook = { version = "0.1.7", optional = true }

[profile.release]
debug = true

[lib]
crate-type = ["cdylib", "rlib"]
